# builder

./: README.md
.github/workflows/: ubuntu.yml
input/a/: CMakeLists.txt
input/a/src/expression-lib/: expression.cpp  expression.h
input/a/test/: test-expression.cpp
input/b/: CMakeLists.txt
input/b/src/application/: CMakeLists.txt  calc.cpp
input/b/src/expression-lib/: Addition.h  CMakeLists.txt  Division.h  Multiplication.h  Operation.h  OperationSet.h  Stack.h  Subtraction.h  expression.cpp  expression.h
input/b/test/: CMakeLists.txt  test-expression.cpp
